[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1p-wallet"
version = "0.1.0"
description = "2FA for web3 wallets"
authors = [{ name = "Nasfame", email = "laciferin@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
keywords = ["streamlit", "web3", "2fa"]

dependencies = [
    "streamlit>=1.49.0,<2",
    "dataclasses-json>=0.6.7,<0.7",
    "web3>=6.0.0,<7",               # For Web3 interactions
    "python-dotenv>=1.0.0,<2",      # For managing environment variables
    "pyotp>=2.0.0,<3",              # For Time-based One-Time Password algorithm (2FA)
    "aptos-sdk>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8", # For testing
]

[project.urls]
Homepage = "https://1p-wallet.streamlit.app"
# Repository = ""
# Documentation = ""
# "Bug Tracker" = ""

[tool.hatch.build.targets.wheel]
include = [
    "app.py",
    "pages/**",
    "utils/**",
    "static/**",
    "Readme.md",
    "LICENSE",
]
